sidetree-mock/kustomize/sidetree-mock/overlays/local/stakeholder-one/ingress.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stakeholder-one
spec:
  tls:
  - hosts:
      - $(STAKEHOLDER_ONE_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(STAKEHOLDER_ONE_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stakeholder-one
            port:
              name: http
